sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: not found: value k
 	if (plusPetit(k+1,k)) {
                      ^AlgCocktailSort1:7: error: not found: value k
 		echange(k+1,k)}
                        ^